--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -7,8 +7,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  width: 100%;
-  max-width: 1200px;
+  width: 100vw;
+  max-width: none;
   padding: 58px 10%;
   gap: 10px;
 }
